--- a/message/pom.xml
+++ b/message/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.example</groupId>
+        <artifactId>fortune-cookie</artifactId>
+        <version>1.0</version>
+    </parent>
     <groupId>org.example</groupId>
     <artifactId>message</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -13,4 +18,17 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <build>
+        <finalName>message</finalName>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <configuration>
+                    <!-- We don't want jib to execute on this module -->
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
